--- a/main.css
+++ b/main.css
@@ -13,17 +13,12 @@
 }
 
 .background-color {
-    background-color: var(--LightGray);
-    width: 1440px;
-    height: 750px;
-    margin: auto;
     display: grid;
-    grid-template-columns: 375px;
+    min-height: 100vh;
     justify-content: center;
 }
 
 .entire {
-    margin-top: auto;
     display: grid;
     align-content: center;
     justify-content: center;
@@ -31,24 +26,24 @@
 
 .background {
     width: 375px;
-    height: 580px;
+    /* height: 580px; */
     background-color: var(--White);
     border-radius: 3%;
 }
 
 .qr-img {
     width: 345px;
-    height: 345px;
-    border-radius: 5%;
-    margin-top: 4%;
-    margin-left: 4%;
+    height: 355px;
+    border-radius: 3%;
+    margin-top: 15px;
+    margin-left: 15px;
 }
 
 h1 {
     text-align: center;
     width: 300px;
     margin: auto;
-    margin-top: 30px;
+    margin-top: 25px;
     font-size: 25px;
     color: var(--DarkBlue)
 }
@@ -57,75 +52,13 @@ p {
     text-align: center;
     font-size: 18px;
     margin: auto;
-    margin-top: 30px;
+    margin-top: 20px;
+    padding-bottom: 30px;
     width: 300px;
-}
+    color: var(--GrayishBlue);
 
-.attribution {
+/* .attribution {
     margin-top: 120px;
     margin-left: -25px;
     width: 500px;
-}
-
-@media only screen and (max-width: 768px) {
-    .entire {
-        grid-template-columns: auto-fit, minmax(375px);
-    }
-}
-
-/* Previous attempt with Positioning EDIT:: DID NOT WORK */
-/* .background-color {
-    background-color: rgb(214, 224, 240);
-    width: 1440px;
-    height: 750px;
-    margin: auto;
-    /* padding: 0; */
-    /* position: relative;
-    top: 100px; 
-}
-
-.background {
-    background-color: var(--White);
-    height: 650px;
-    width: 425px;
-    position: absolute;
-    top: 17%;
-    left: 38%;
-    border-radius: 5%;
-}
-
-.qr-img {
-    position: absolute;
-    border-radius: 5%;
-    left: 39%;
-    top: 19%;
-    height: 388px;
-    width: 388px;
-}
-
-h1 {
-    position: absolute;
-    width: 389px;
-    left: 39%;
-    top: 61%;
-    text-align: center;
-    color: var(--DarkBlue);
-}
-
-p {
-    width: 388px;
-    left: 39%;
-    text-align: center;
-    position: absolute;
-    top: 72%;
-    font-size: 22px;
-    color: var(--GrayishBlue);
-}
-
-
-
-@media only screen and (max-width: 768px) {
-    .entire {
-        width: 100%;
-    }
 } */
